Keyboard layout issues fiexd on full screen

--- a/client/src/scss/_keyboard.scss
+++ b/client/src/scss/_keyboard.scss
@@ -3,7 +3,7 @@
 #letters {
   display: flex;
   justify-content: center;
-  width: 42%;
+  width: 30%;
   margin: 0 auto;
   flex-wrap: wrap;
   button {
